Fixed spacing between main divs

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,10 +19,6 @@
 font-size: large;
 }
 
-#maindiv {
-	background-color: #C01C1C;
-}
-
 .arrowbtn {
 	border-color: rgba(100, 100, 100, 0.0);
 	background-color: rgba(100, 100, 100, 0.0);
@@ -72,7 +68,7 @@ font-size: large;
 
 #datatable {
 	font-family: 	Arial, Verdana, sans-serif;
-	font-size:	11px;
+	font-size:	13px;
 }
 
 #tablepanel {
@@ -111,22 +107,26 @@ margin-left: -5px;
 
 #rightcollumn {
 
-	background-color: #BD0FE1;
+	
 	min-width: 480px;
 	white-space: nowrap;
 
 }
 
+#submission {
+	background-color: #AFC6E0;
+}
+
 #innermainrow {
 	min-width: 1000px;
-	max-width: 1300px;
-	background-color: #C51C1C;
+	max-width: 1500px;
+	
 	height: 100px;
 	display: flex;
 }
 
 #mainrow {
-	max-width: 1100px;
+	max-width: 1500px;
 	min-width: 1000px;
 	overflow: auto;
 	max-height: 100px;
@@ -147,6 +147,7 @@ margin-left: -5px;
 .top17 { margin-top:17px; }
 .top30 { margin-top:30px; }
 .top45 { margin-top:45px; }
+.top60 { margin-top:60px; }
 
 .bottom5 { margin-bottom:5px; }
 .bottom7 { margin-bottom:7px; }
